code/slurm-14317393.out

The following have been reloaded with a version change:
  1) python/2.7.11 => python/3.7.2

  File "/sw/apps/bioinfo/phylophlan/0.99/rackham/bin/phylophlan.py", line 393
    except OSError, e:
                  ^
SyntaxError: invalid syntax
